MULE-10869: Migrate individual threads